@@ -1,7 +1,7 @@
 #include <tau/tau.h>
 #include <libmseed.h>
 
-TEST (SID, sid2nslc)
+TEST (SID, ms_sid2nslc_n)
 {
   char net[11];
   char sta[11];
@@ -12,42 +12,48 @@ TEST (SID, sid2nslc)
   /* Suppress error and warning messages by accumulating them */
   ms_rloginit (NULL, NULL, NULL, NULL, 10);
 
-  rv = ms_sid2nslc ("FDSN:XX_TEST__L_H_Z", net, sta, loc, chan);
-  CHECK (rv == 0, "ms_sid2nslc returned unexpected error");
+  rv = ms_sid2nslc_n ("FDSN:XX_TEST__L_H_Z", net, sizeof (net), sta, sizeof (sta),
+                      loc, sizeof (loc), chan, sizeof (chan));
+  CHECK (rv == 0, "ms_sid2nslc_n returned unexpected error");
   CHECK_STREQ (net, "XX");
   CHECK_STREQ (sta, "TEST");
   CHECK_STREQ (loc, "");
   CHECK_STREQ (chan, "LHZ");
 
-  rv = ms_sid2nslc ("FDSN:XX_TEST__BB_SS_ZZ", net, sta, loc, chan);
-  CHECK (rv == 0, "ms_sid2nslc returned unexpected error");
+  rv = ms_sid2nslc_n ("FDSN:XX_TEST_00_BB_SS_ZZ", net, sizeof (net), sta, sizeof (sta),
+                      loc, sizeof (loc), chan, sizeof (chan));
+  CHECK (rv == 0, "ms_sid2nslc_n returned unexpected error");
   CHECK_STREQ (net, "XX");
   CHECK_STREQ (sta, "TEST");
-  CHECK_STREQ (loc, "");
+  CHECK_STREQ (loc, "00");
   CHECK_STREQ (chan, "BB_SS_ZZ");
 
-  rv = ms_sid2nslc ("FDSN:EXTRANS:XX_TEST__BB_SS_ZZ", net, sta, loc, chan);
-  CHECK (rv == 0, "ms_sid2nslc returned unexpected error");
+  rv = ms_sid2nslc_n ("FDSN:EXTRANS:XX_TEST__BB_SS_ZZ", net, sizeof (net), sta, sizeof (sta),
+                      loc, sizeof (loc), chan, sizeof (chan));
+  CHECK (rv == 0, "ms_sid2nslc_n returned unexpected error");
   CHECK_STREQ (net, "XX");
   CHECK_STREQ (sta, "TEST");
   CHECK_STREQ (loc, "");
   CHECK_STREQ (chan, "BB_SS_ZZ");
 
   /* Error tests */
-  rv = ms_sid2nslc ("XX_TEST__BB_SS_ZZ", net, sta, loc, chan);
+  rv = ms_sid2nslc_n ("XX_TEST__BB_SS_ZZ", net, sizeof (net), sta, sizeof (sta),
+                      loc, sizeof (loc), chan, sizeof (chan));
   CHECK (rv == -1, "ms_sid2nslc did not return expected -1");
 
-  rv = ms_sid2nslc ("MYDC:XX_TEST__BB_SS_ZZ", net, sta, loc, chan);
+  rv = ms_sid2nslc_n ("MYDC:XX_TEST__BB_SS_ZZ", net, sizeof (net), sta, sizeof (sta),
+                      loc, sizeof (loc), chan, sizeof (chan));
   CHECK (rv == -1, "ms_sid2nslc did not return expected -1");
 
-  rv = ms_sid2nslc ("FDSN:YY_STA", net, sta, NULL, NULL);
+  rv = ms_sid2nslc_n ("FDSN:YY_STA", net, sizeof (net), sta, sizeof (sta),
+                      NULL, 0, NULL, 0);
   CHECK (rv == -1, "ms_sid2nslc did not return expected -1");
 
-  rv = ms_sid2nslc (NULL, NULL, NULL, NULL, NULL);
+  rv = ms_sid2nslc_n (NULL, NULL, 0, NULL, 0, NULL, 0, NULL, 0);
   CHECK (rv == -1, "ms_sid2nslc did not return expected -1");
 }
 
-TEST (SID, nslc2sid) {
+TEST (SID, ms_nslc2sid) {
   uint16_t flags = 0;
   char sid[LM_SIDLEN];
   int rv;
