@@ -6,7 +6,9 @@
 	Previously this was a value of 0, corresponding to 1970-01-01T00:00:00Z.
 	- msr3_print(): do not force high resolution printing of sample rate.
 	- Add MSF_PPUPDATETIME flag to store update time (as nstime_t) at MS3TraceSeg.prvtptr.
-	- Add support for generating SourceIDs from SEED codes with spaces.
+	- Add support for generating SourceIDs from SEED codes with (illegal) spaces.
+	- Add ms_sid2nslc_n() with destination buffer sizes for memory safety.
+	- Deprecate ms_sid2nslc(), supports max buffers needed for SEED codes.
 
 2024.165: 3.1.3
 	- Use sequence number from extra headers (/FDSN/Sequence) if present when writing format v2.
